# lines2

./: .env  .gitignore  MACHINE_LEARNING.md  db.py  db_dump.sql  db_utils.py  main.py  model_data.py  nfl_spread_model.py  nfl_weekly_update.py  predict_spreads.py  pyproject.toml  train_model.py
