[project]
name = "lines2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "dotenv>=0.9.9",
    "lxml>=5.0.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tabulate>=0.9.0",
    "tensorflow>=2.20.0",
]
